Cloud/AWS/project/template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: CloudFormation template for tp2

Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 172.31.0.0/24
      InstanceTenancy: default
      # Tags: 
      #   - Key: stack
      #     Value: vpc-tp2

  
  myInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags: 
        - Key: stack
          Value: gateway-tp2

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: myVPC
      InternetGatewayId:
        Ref: myInternetGateway

  myRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: myVPC
      # Tags:
      # - Key: stack
      #   Value: routetable-tp2

  myRoute:
    Type: AWS::EC2::Route
    DependsOn: myInternetGateway
    Properties:
       RouteTableId:
         Ref: myRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: myInternetGateway

  mySubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 172.31.0.0/24
      AvailabilityZone: "eu-west-3a"
      MapPublicIpOnLaunch: true
      # Tags:
      # - Key: stack
      #   Value: subnet-tp2

  mySubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: mySubnet
      RouteTableId:
        Ref: myRouteTable

  mySecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
        GroupDescription: Base Security Group
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            CidrIp: 0.0.0.0/0
            FromPort: 22
            ToPort: 22
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0

  Ec2Instance: 
    Type: AWS::EC2::Instance
    Properties: 
      InstanceType : t2.micro
      ImageId: ami-00c08ad1a6ca8ca7c
      NetworkInterfaces: 
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet: 
            - Ref: mySecurityGroup
          SubnetId: 
            Ref: mySubnet
    
  S3Bucket:
    Type: AWS::S3::Bucket
    Description: Creating Amazon S3 bucket from CloudFormation
    Properties:
      BucketName: lebucketdalex
      VersioningConfiguration:
        Status: Enabled
Outputs:
  S3Bucket:
    Description: Bucket Created using this template.
    Value: !Ref S3Bucket
